<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_gallery">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.Appthuchi.Appqlthuchi.ui.khoanthu.KhoanthuFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_khoanthu" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.Appthuchi.Appqlthuchi.ui.khoanchi.KhoanchiFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.Appthuchi.Appqlthuchi.ui.thongke.ThongkeFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/nav_share"
        android:name="com.Appthuchi.Appqlthuchi.ui.gioithieu.GioiThieuFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_gioithieu" />

    <fragment
        android:id="@+id/nav_thoat"
        android:name="com.Appthuchi.Appqlthuchi.ui.thoat.ThoatFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>